syntax = "proto3";

package cdn.cloud_api.proto.saltapi;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

import "cdn/cloud_api/proto/saltapi/saltapi_params.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/saltapi";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "CDN Cloud API - Salt Endpoints"
        version: "1.0.0"
    }
};

service SaltService {
    // Dump active resources and associated origins groups and rules
    rpc Dump(DumpRequest) returns (DumpResponse) {
        option (google.api.http) = {
            get: "/salt/dump"
        };
    }
}
